update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,9 @@ contributor:
     gutenberg_agent_id: '49851'
     url: http://www.gutenberg.org/2009/agents/49851
     wikipedia: https://de.wikipedia.org/wiki/Elisabeth_Kaerrick
+covers:
+- cover_type: archival
+  image_path: 67541-h/images/cover.jpg
 creator:
   author:
     agent_name: Dostoyevsky, Fyodor
@@ -56,6 +59,8 @@ creator:
     - https://de.wikipedia.org/wiki/Arthur_Moeller_van_den_Bruck
     - https://en.wikipedia.org/wiki/Arthur_Moeller_van_den_Bruck
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67541#Samtliche-Werke-9-10-Die-Bruder-Karamasoff
 gutenberg_issued: '2022-03-02'
 identifiers:
   gutenberg: '67541'
